--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     </ul>
     <p>En un lugar de La Mancha</p>
     <p>De cuyo nombre no quiero acordarme</p>
+
+    <footer>
+        <p>&copy; 2022 ACME</p>
+    </footer>
 </body>
 </html>
